upload reward amount

--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "Berlaku sampai",
   "Done": "Selesai",
   "Done...": "Selesai...",
-  "You have received 100 DGC points !": "Anda telah menerima 100 poin DGC!",
+  "You have received {{clockin}} DGC points !": "Anda telah menerima {{clockin}} poin DGC!",
   "Failed to received reward": "Gagal menerima hadiah.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Hadiah clockin hanya bisa diperoleh sekali dalam jangka waktu 24 jam, Anda bisa mencobanya lagi nanti.",
   "You Rewards History not found": "Riwayat hadiah Anda tidak ditemukan.",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "Kode verifikasi telah diverifikasi dengan sukses",
   "The verification code is invalid": "Kode verifikasi tidak valid",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Pengguna dompet digital yang telah menyelesaikan KYC mengundang orang lain untuk membuat dompet digital dan menyelesaikan KYC.",
-  "The number of people invited each day should not exceed 20.": "Jumlah orang yang diundang setiap hari tidak boleh melebihi 20 orang.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Untuk setiap orang yang diundang, dan jika orang yang diundang masuk ke sistem secara berkelanjutan sebanyak tiga kali, pengundang akan menerima hadiah <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，Tanggal batas kegiatan adalah 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Jumlah orang yang diundang setiap hari tidak boleh melebihi {{ipeoples}} orang.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Untuk setiap orang yang diundang, dan jika orang yang diundang masuk ke sistem secara berkelanjutan sebanyak tiga kali, pengundang akan menerima hadiah <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC，Tanggal batas kegiatan adalah {{endtime}}.",
   "III. Clock in Reward": "III. Hadiah Absensi",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "Hadiah absensi berlaku selama <span style='color: rgba(184, 142, 86, 1);'>180</span> hari setelah autentikasi selesai.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Masuk ke akun dan melakukan absensi selama <span style='color: rgba(184, 142, 86, 1);'>1</span> hari dapat menghasilkan hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; maksimum <span style='color: rgba(184, 142, 86, 1);'>30</span> hadiah absensi.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Hadiah <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC memerlukan penyelesaian Prosedur Pengetahuan Pelanggan KYC, dan harus diambil pada hari yang sama; akan kadaluarsa jika tidak diambil.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "Hadiah absensi berlaku selama <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> hari setelah autentikasi selesai.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Masuk ke akun dan melakukan absensi selama <span style='color: rgba(184, 142, 86, 1);'>1</span> hari dapat menghasilkan hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC; maksimum <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> hadiah absensi.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Hadiah <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC memerlukan penyelesaian Prosedur Pengetahuan Pelanggan KYC, dan harus diambil pada hari yang sama; akan kadaluarsa jika tidak diambil.",
   "The check-in reward has expired!": "Hadiah check-in telah kedaluwarsa!",
   "Show me a code snippet": "Tunjukkan kepada saya potongan kode",
   "of a website's sticky header": "dari judul tetap situs web",
