--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -655,7 +655,7 @@
   "Valid until": "Действителен до",
   "Done": "Выполнено",
   "Done...": "Выполнено...",
-  "You have received 100 DGC points !": "Вы получили 100 баллов DGC!",
+  "You have received {{clockin}} DGC points !": "Вы получили {{clockin}} баллов DGC!",
   "Failed to received reward": "Не удалось получить награду.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Награда за регистрацию может быть получена только один раз в течение 24-часового периода. Вы можете попробовать позже.",
   "You Rewards History not found": "История ваших наград не найдена.",
@@ -765,15 +765,15 @@
   "The verification code has been verified successfully": "Код верификации был успешно проверен.",
   "The verification code is invalid": "Код верификации недействителен.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Пользователи кошельков, которые завершили процедуру идентификации KYC, приглашают других создать кошельки и также завершить процедуру KYC.",
-  "The number of people invited each day should not exceed 20.": "Количество приглашенных людей в день не должно превышать 20.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Для каждого приглашенного человека, и если приглашенный человек последовательно входит в систему трижды, пригласивший получит вознаграждение в размере <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，Дата окончания мероприятия до 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Количество приглашенных людей в день не должно превышать {{ipeoples}}.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Для каждого приглашенного человека, и если приглашенный человек последовательно входит в систему трижды, пригласивший получит вознаграждение в размере <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC，Дата окончания мероприятия до {{endtime}}.",
   "III. Clock in Reward": "III. Премия за отметку времени",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "Премия за отметку времени действительна в течение <span style='color: rgba(184, 142, 86, 1);'>180</span> дней после завершения аутентификации.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Войдя в систему и отметившись в течение <span style='color: rgba(184, 142, 86, 1);'>1</span> дня, можно заработать <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC в виде премии; максимальное количество премий за отметку времени - <span style='color: rgba(184, 142, 86, 1);'>30</span>.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Награда в размере <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC требует завершения процедуры идентификации клиента KYC, и ее необходимо забрать в тот же день. Если ее не забрать, награда истечёт.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "Премия за отметку времени действительна в течение <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> дней после завершения аутентификации.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Войдя в систему и отметившись в течение <span style='color: rgba(184, 142, 86, 1);'>1</span> дня, можно заработать <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC в виде премии; максимальное количество премий за отметку времени - <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Награда в размере <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC требует завершения процедуры идентификации клиента KYC, и ее необходимо забрать в тот же день. Если ее не забрать, награда истечёт.",
   "The check-in reward has expired!": "Бонус за вход истек!",
   "Show me a code snippet": "Покажите мне фрагмент кода",
   "of a website's sticky header": "фиксированного заголовка веб-сайта",
