--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "Hiệu lực cho đến",
   "Done": "Đã hoàn thành",
   "Done...": "Đã hoàn thành...",
-  "You have received 100 DGC points !": "Bạn đã nhận được 100 điểm DGC!",
+  "You have received {{clockin}} DGC points !": "Bạn đã nhận được {{clockin}} điểm DGC!",
   "Failed to received reward": "Không thể nhận thưởng được.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Phần thưởng đăng nhập chỉ có thể được nhận một lần trong thời gian 24 giờ, bạn có thể thử lại sau.",
   "You Rewards History not found": "Lịch sử thưởng của bạn không được tìm thấy.",
@@ -757,15 +757,15 @@
   "The verification code has been verified successfully": "Mã xác thực đã được xác thực thành công.",
   "The verification code is invalid": "Mã xác thực không hợp lệ.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Người dùng ví điện tử đã hoàn thành thủ tục KYC sẽ mời người khác tạo một ví điện tử và hoàn thành thủ tục KYC.",
-  "The number of people invited each day should not exceed 20.": "Số lượng người được mời mỗi ngày không được vượt quá 20 người.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Với mỗi người được mời, và nếu người được mời đăng nhập liên tiếp ba lần, người mời sẽ nhận được phần thưởng là <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, Ngày chấm dứt của hoạt động là đến 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Số lượng người được mời mỗi ngày không được vượt quá {{ipeoples}} người.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Với mỗi người được mời, và nếu người được mời đăng nhập liên tiếp ba lần, người mời sẽ nhận được phần thưởng là <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, Ngày chấm dứt của hoạt động là đến {{endtime}}.",
   "III. Clock in Reward": "III. Thưởng cho việc check-in",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "Phần thưởng cho việc check-in có hiệu lực trong <span style='color: rgba(184, 142, 86, 1);'>180</span> ngày sau khi hoàn thành xác thực.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Đăng nhập và check-in trong <span style='color: rgba(184, 142, 86, 1);'>1</span> ngày có thể kiếm được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; tối đa <span style='color: rgba(184, 142, 86, 1);'>30</span> phần thưởng cho việc check-in.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Phần thưởng <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC yêu cầu phải hoàn thành quy trình Kiểm tra Thông tin Khách hàng KYC và phải được yêu cầu trong cùng một ngày; nếu không được yêu cầu thì sẽ hết hạn.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "Phần thưởng cho việc check-in có hiệu lực trong <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> ngày sau khi hoàn thành xác thực.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Đăng nhập và check-in trong <span style='color: rgba(184, 142, 86, 1);'>1</span> ngày có thể kiếm được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC; tối đa <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> phần thưởng cho việc check-in.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Phần thưởng <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC yêu cầu phải hoàn thành quy trình Kiểm tra Thông tin Khách hàng KYC và phải được yêu cầu trong cùng một ngày; nếu không được yêu cầu thì sẽ hết hạn.",
   "The check-in reward has expired!": "Ưu đãi check-in đã hết hạn!",
   "Show me a code snippet": "Hiển thị cho tôi một đoạn mã code",
   "of a website's sticky header": "của tiêu đề dính của một trang web",
