--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -655,7 +655,7 @@
   "Valid until": "有效期到",
   "Done": "完成",
   "Done...": "完成...",
-  "You have received 100 DGC points !": "您已收到 100 个 DGC 积分！",
+  "You have received {{clockin}} DGC points !": "您已收到 {{clockin}} 个 DGC 积分！",
   "Failed to received reward": "未能领取奖励",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "打卡奖励在 24 小时内只能获取一次，您可以稍后再试。",
   "You Rewards History not found": "未找到您的奖励记录",
@@ -765,15 +765,15 @@
   "The verification code has been verified successfully": "验证码验证成功",
   "The verification code is invalid": "验证码无效",
   "I. New User Creation Reward": "I. 新用户创建奖励",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span>个 DGC 的奖励。",
   "II. Referral Reward(The activity lasts until January 2nd, 2025)": "II. 推荐奖励",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "完成KYC的钱包用户，邀请他人创建钱包且完成KYC",
-  "The number of people invited each day should not exceed 20.": "每天邀请人数不超过20人。",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.":"每邀请一个人，且被邀请者连续3 次签到，邀请者将获得 <span style='color: rgba(184, 142, 86, 1);'>3,000</span>  DGC 的奖励, 活动截止日到2025-07-01 00:00:00。",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "每天邀请人数不超过{{ipeoples}}人。",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":"每邀请一个人，且被邀请者连续3 次签到，邀请者将获得 <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span>  DGC 的奖励, 活动截止日到{{endtime}}。",
   "III. Clock in Reward": "III. 签到奖励",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "签到奖励在完成认证后的<span style='color: rgba(184, 142, 86, 1);'>180</span>天内有效。",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "每日登录并签到可赚取<span style='color: rgba(184, 142, 86, 1);'>100</span>个 DGC 奖励；最多可获得<span style='color: rgba(184, 142, 86, 1);'>30</span>次签到奖励。",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> 个 DGC 奖励需要完成 KYC 流程，并且必须在同一天内领取；若未领取将会过期。",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "签到奖励在完成认证后的<span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span>天内有效。",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "每日登录并签到可赚取<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span>个 DGC 奖励；最多可获得<span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>次签到奖励。",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> 个 DGC 奖励需要完成 KYC 流程，并且必须在同一天内领取；若未领取将会过期。",
   "The check-in reward has expired!": "签到奖励已过期！",
   "Show me a code snippet": "给我展示一段代码片段",
   "of a website's sticky header": "一个网站的粘性头部（固定头部）的",
