--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "Gültig bis",
   "Done": "Erledigt",
   "Done...": "Erledigt...",
-  "You have received 100 DGC points !": "Sie haben 100 DGC-Punkte erhalten!",
+  "You have received {{clockin}} DGC points !": "Sie haben {{clockin}} DGC-Punkte erhalten!",
   "Failed to received reward": "Es ist nicht möglich, die Belohnung zu erhalten.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later. ": "Die Anmeldeprämien können nur einmal innerhalb eines Zeitraums von 24 Stunden erhalten werden. Sie können es später nochmal versuchen.",
   "You Rewards History not found": "Ihre Belohnungsgeschichte wurde nicht gefunden.",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "Der Verifizierungscode wurde erfolgreich verifiziert",
   "The verification code is invalid": "Der Verifizierungscode ist ungültig",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Wallet-Benutzer, die die KYC abgeschlossen haben, laden andere ein, Wallets zu erstellen und die KYC abzuschließen.",
-  "The number of people invited each day should not exceed 20.": "Die Anzahl der jeden Tag eingeladenen Personen darf nicht über 20 hinausgehen.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Für jede eingeladene Person und wenn die eingeladene Person sich drei Mal hintereinander anmeldet, erhält der Einladende eine Belohnung von <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，Der Endtermin der Aktivität ist der 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Die Anzahl der jeden Tag eingeladenen Personen darf nicht über {{ipeoples}} hinausgehen.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Für jede eingeladene Person und wenn die eingeladene Person sich drei Mal hintereinander anmeldet, erhält der Einladende eine Belohnung von <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC，Der Endtermin der Aktivität ist der {{endtime}}.",
   "III. Clock in Reward": "III. Anmeldebelohnung",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "Die Anmeldebelohnung ist für <span style='color: rgba(184, 142, 86, 1);'>180</span> Tage nach der Vervollständigung der Authentifizierung gültig.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Durch das Einloggen und Anmelden an einem Tag kann man <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC-Belohnungen verdienen; maximal <span style='color: rgba(184, 142, 86, 1);'>30</span> Anmeldebelohnungen.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC-Belohnungen erfordern die Durchführung der Know-Your-Customer-Prozedur KYC, und sie müssen am gleichen Tag abgeholt werden. Sie verfallen, wenn sie nicht abgeholt werden.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "Die Anmeldebelohnung ist für <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> Tage nach der Vervollständigung der Authentifizierung gültig.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Durch das Einloggen und Anmelden an einem Tag kann man <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC-Belohnungen verdienen; maximal <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Anmeldebelohnungen.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC-Belohnungen erfordern die Durchführung der Know-Your-Customer-Prozedur KYC, und sie müssen am gleichen Tag abgeholt werden. Sie verfallen, wenn sie nicht abgeholt werden.",
   "The check-in reward has expired!": "Die Check-in Belohnung ist abgelaufen!",
   "Show me a code snippet": "Zeige mir einen Code-Ausschnitt",
   "of a website's sticky header": "eines feststehenden Headers einer Website",
