--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "",
   "Done": "",
   "Done...": "",
-  "You have received 100 DGC points !": "",
+  "You have received {{clockin}} DGC points !": "",
   "Failed to received reward": "",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "",
   "You Rewards History not found": "",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "",
   "The verification code is invalid": "",
   "I. New User Creation Reward": "",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "",
   "II. Referral Reward": "",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "",
-  "The number of people invited each day should not exceed 20.": "",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.":"",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":"",
   "III. Clock in Reward": "",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "",
   "The check-in reward has expired!": "",
   "Show me a code snippet": "",
   "of a website's sticky header": "",
