--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -655,7 +655,7 @@
   "Valid until": "Valide jusqu'à",
   "Done": "Fait",
   "Done...": "Fait...",
-  "You have received 100 DGC points !": "Vous avez reçu 100 points DGC!",
+  "You have received {{clockin}} DGC points !": "Vous avez reçu {{clockin}} points DGC!",
   "Failed to received reward": "Échec de la réception de la récompense",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Les récompenses de clockin ne peuvent être obtenues qu'une seule fois dans une période de 24 heures. Vous pouvez essayer plus tard.",
   "You Rewards History not found": "Aucune historique de vos récompenses n'a été trouvée.",
@@ -765,15 +765,15 @@
   "The verification code has been verified successfully": "Le code de vérification a été vérifié avec succès",
   "The verification code is invalid": "Le code de vérification est invalide",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Les utilisateurs du portefeuille qui ont effectué la procédure de KYC invitent d'autres personnes à créer des portefeuilles et à effectuer la procédure de KYC.",
-  "The number of people invited each day should not exceed 20.": "Le nombre de personnes invitées chaque jour ne doit pas dépasser 20.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Pour chaque personne invitée, et si la personne invitée se connecte pendant trois fois consécutives, l'invitateur recevra une récompense de <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，La date limite de l'activité est le 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Le nombre de personnes invitées chaque jour ne doit pas dépasser {{ipeoples}}.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Pour chaque personne invitée, et si la personne invitée se connecte pendant trois fois consécutives, l'invitateur recevra une récompense de <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC，La date limite de l'activité est le {{endtime}}.",
   "III. Clock in Reward": "III. Récompense pour le pointage",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "La récompense pour le pointage est valide pendant <span style='color: rgba(184, 142, 86, 1);'>180</span> jours après la fin de l'authentification.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Se connecter et effectuer le pointage pendant <span style='color: rgba(184, 142, 86, 1);'>1</span> jour permet d'obtenir des récompenses de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ; maximum de <span style='color: rgba(184, 142, 86, 1);'>30</span> récompenses pour le pointage.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Les récompenses de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC exigent la réalisation de la procédure de Connaissance de votre client KYC et doivent être réclamées le même jour ; elles prendront fin si elles ne sont pas réclamées.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "La récompense pour le pointage est valide pendant <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> jours après la fin de l'authentification.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Se connecter et effectuer le pointage pendant <span style='color: rgba(184, 142, 86, 1);'>1</span> jour permet d'obtenir des récompenses de <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC ; maximum de <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> récompenses pour le pointage.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "Les récompenses de <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC exigent la réalisation de la procédure de Connaissance de votre client KYC et doivent être réclamées le même jour ; elles prendront fin si elles ne sont pas réclamées.",
   "The check-in reward has expired!": "La récompense de check-in est expirée !",
   "Show me a code snippet": "Montrez-moi un extrait de code",
   "of a website's sticky header": "d'un en-tête fixe d'un site web",
