--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "有効期限まで",
   "Done": "かんせい",
   "Done...": "かんせい...",
-  "You have received 100 DGC points !": "あなたは 100 の DGC ポイントを受け取りました！",
+  "You have received {{clockin}} DGC points !": "あなたは {{clockin}} の DGC ポイントを受け取りました！",
   "Failed to received reward": "報酬を受け取ることができませんでした。",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "クロックインの報酬は 24 時間以内に 1 回だけ取得でき、後で試してみることができます。",
   "You Rewards History not found": "あなたの報酬履歴が見つかりません。",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "認証コードが正常に検証されました",
   "The verification code is invalid": "認証コードは無効です",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "KYC を完了したウォレットのユーザーは、他の人にウォレットを作成して KYC を完了するように誘導します。",
-  "The number of people invited each day should not exceed 20.": "1 日あたりの招待人数は 20 人を超えてはいけません。",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.":" 招待した 1 人ごとに、招待された方が連続で 3 回ログインした場合、招待者は<span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC の報酬を受け取ります, そのイベントの締め切り日は 2025-07-01 00:00:00 です。",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "1 日あたりの招待人数は {{ipeoples}} 人を超えてはいけません。",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":" 招待した 1 人ごとに、招待された方が連続で 3 回ログインした場合、招待者は<span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC の報酬を受け取ります, そのイベントの締め切り日は {{endtime}} です。",
   "III. Clock in Reward": "III. 出勤打刻報酬",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "認証完了後の<span style='color: rgba(184, 142, 86, 1);'>180</span>日間、出勤打刻報酬は有効です。",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span> 日間ログインして出勤打刻を行うと、<span style='color: rgba(184, 142, 86, 1);'>100</span>個の DGC 報酬を獲得できます。出勤打刻報酬は最大<span style='color: rgba(184, 142, 86, 1);'>30</span>回までです。",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC の報酬は、顧客の身元確認 KYC を完了する必要があり、それは同日に請求しなければなりません。請求しない場合は失効します。",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "認証完了後の<span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span>日間、出勤打刻報酬は有効です。",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span> 日間ログインして出勤打刻を行うと、<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span>個の DGC 報酬を獲得できます。出勤打刻報酬は最大<span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>回までです。",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC の報酬は、顧客の身元確認 KYC を完了する必要があり、それは同日に請求しなければなりません。請求しない場合は失効します。",
   "The check-in reward has expired!": "チェックイン報酬は期限切れとなりました！",
   "Show me a code snippet": "コードの断片を見せてください",
   "of a website's sticky header": "ウェブサイトの固定ヘッダーの",
