--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "유효기간까지",
   "Done": "완료",
   "Done...": "완료...",
-  "You have received 100 DGC points !": "100개의 DGC 포인트를 받았습니다!",
+  "You have received {{clockin}} DGC points !": "{{clockin}}개의 DGC 포인트를 받았습니다!",
   "Failed to received reward": "보상 수령에 실패했습니다.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "클록인 보상은 24시간 동안 한 번만 받을 수 있으며 나중에 시도해 보실 수 있습니다.",
   "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "인증 코드가 성공적으로 검증되었습니다.",
   "The verification code is invalid": "인증 코드가 유효하지 않습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "KYC를 완료한 지갑 사용자들은 다른 사람들에게 지갑을 만들고 KYC를 완료하도록 초대합니다.",
-  "The number of people invited each day should not exceed 20.": "하루에 초대할 수 있는 인원 수는 20명을 초과해서는 안 됩니다.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "초대한 모든 사람에 대해 초대된 사람이 연속으로 세 번 로그인하면, 초대자는 <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC의 보상을 받을 것입니다，행사의 마감일은 2025-07-01 00:00:00 입니다.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "하루에 초대할 수 있는 인원 수는 {{ipeoples}}명을 초과해서는 안 됩니다.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "초대한 모든 사람에 대해 초대된 사람이 연속으로 세 번 로그인하면, 초대자는 <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC의 보상을 받을 것입니다，행사의 마감일은 {{endtime}} 입니다.",
   "III. Clock in Reward": "III. 출근 기록 보상",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>180</span>일 동안 출근 기록 보상이 유효합니다.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span>일 동안 로그인하고 출근 기록을 남기는 경우 <span style='color: rgba(184, 142, 86, 1);'>100</span>개의 DGC 보상을 받을 수 있습니다. 출근 기록 보상은 최대 <span style='color: rgba(184, 142, 86, 1);'>30</span>회까지 가능합니다.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC 보상은 고객인식 KYC 절차를 완료해야 하며, 같은 날에 청구해야 합니다. 청구하지 않으면 만료됩니다.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span>일 동안 출근 기록 보상이 유효합니다.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span>일 동안 로그인하고 출근 기록을 남기는 경우 <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span>개의 DGC 보상을 받을 수 있습니다. 출근 기록 보상은 최대 <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>회까지 가능합니다.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC 보상은 고객인식 KYC 절차를 완료해야 하며, 같은 날에 청구해야 합니다. 청구하지 않으면 만료됩니다.",
   "The check-in reward has expired!": "체크인 보상이 만료되었습니다!",
   "Show me a code snippet": "코드 조각을 보여주세요",
   "of a website's sticky header": "웹사이트의 고정 헤더의",
