--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -655,7 +655,7 @@
   "Valid until": "มีผลตั้งแต่ถึง",
   "Done": "เสร็จแล้ว",
   "Done...": "เสร็จแล้ว...",
-  "You have received 100 DGC points !": "คุณได้รับแต้ม DGC 100 แต้ม!",
+  "You have received {{clockin}} DGC points !": "คุณได้รับแต้ม DGC {{clockin}} แต้ม!",
   "Failed to received reward": "ไม่สามารถรับรางวัลได้",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "รางวัลจากการคล็อกอินสามารถได้รับเพียงครั้งเดียวในช่วงเวลา 24 ชั่วโมงเท่านั้น คุณสามารถลองอีกครั้งในภายหลังได้",
   "You Rewards History not found": "ไม่พบประวัติการรับรางวัลของคุณ",
@@ -765,15 +765,15 @@
   "The verification code has been verified successfully": "รหัสการยืนยันถูกตรวจสอบสำเร็จแล้ว",
   "The verification code is invalid": "รหัสการยืนยันไม่ถูกต้อง",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC.",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "ผู้ใช้กระเป๋าเงินดิจิทัลที่สำเร็จขั้นตอนการระบุตัวตน KYC แล้ว จะเชิญผู้อื่นสร้างกระเป๋าเงินดิจิทัลและสำเร็จขั้นตอนการระบุตัวตน KYC ด้วย",
-  "The number of people invited each day should not exceed 20.": "จำนวนผู้ที่ถูกเชิญในแต่ละวันไม่ควรเกิน 20 คน",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "สำหรับทุกผู้ที่ถูกเชิญ และหากผู้ที่ถูกเชิญเข้าสู่ระบบอย่างต่อเนื่องสามครั้ง ผู้ที่เชิญจะได้รับรางวัลในจำนวน <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC วันสิ้นสุดของกิจกรรมคือ 2025-07-01 00:00:00",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "จำนวนผู้ที่ถูกเชิญในแต่ละวันไม่ควรเกิน {{ipeoples}} คน",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "สำหรับทุกผู้ที่ถูกเชิญ และหากผู้ที่ถูกเชิญเข้าสู่ระบบอย่างต่อเนื่องสามครั้ง ผู้ที่เชิญจะได้รับรางวัลในจำนวน <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC วันสิ้นสุดของกิจกรรมคือ {{endtime}}",
   "III. Clock in Reward": "III. ค่าตอบแทนสำหรับการเช็คอิน",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "ค่าตอบแทนสำหรับการเช็คอินมีผลใช้งานได้ในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>180</span> วันหลังจากเสร็จสิ้นการยืนยัน",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "การเข้าสู่ระบบและเช็คอินในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>1</span> วันสามารถทำเงินได้ค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; สูงสุดคือ <span style='color: rgba(184, 142, 86, 1);'>30</span> ค่าตอบแทนสำหรับการเช็คอิน",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "รางวัล <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ต้องทำการเตรียมข้อมูลการรู้จักลูกค้า KYC และต้องขอสิทธิ์ในวันเดียวกัน หากไม่ขอสิทธิ์จะหมดอายุ.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "ค่าตอบแทนสำหรับการเช็คอินมีผลใช้งานได้ในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> วันหลังจากเสร็จสิ้นการยืนยัน",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "การเข้าสู่ระบบและเช็คอินในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>1</span> วันสามารถทำเงินได้ค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC; สูงสุดคือ <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> ค่าตอบแทนสำหรับการเช็คอิน",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "รางวัล <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC ต้องทำการเตรียมข้อมูลการรู้จักลูกค้า KYC และต้องขอสิทธิ์ในวันเดียวกัน หากไม่ขอสิทธิ์จะหมดอายุ.",
   "The check-in reward has expired!": "รางวัลสำหรับการเช็คอิน已經หมดอายุแล้ว!",
   "Show me a code snippet": "แสดงชิ้นส่วนของโค้ดให้ฉันดู",
   "of a website's sticky header": "ของหัวข้อแน่นของเว็บไซต์",
