--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -656,7 +656,7 @@
   "Valid until": "Geçerli olana kadar",
   "Done": "Tamamlandı",
   "Done...": "Tamamlandı...",
-  "You have received 100 DGC points !": "100 DGC puanı aldınız!",
+  "You have received {{clockin}} DGC points !": "{{clockin}} DGC puanı aldınız!",
   "Failed to received reward": "Ödül alma işlemi başarısız oldu.",
   "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Clockin ödülleri yalnızca 24 saatlik bir süre içinde bir kez alınabilir, daha sonra deneyebilirsiniz.",
   "You Rewards History not found": "Ödül geçmişiniz bulunamadı.",
@@ -766,15 +766,15 @@
   "The verification code has been verified successfully": "Doğrulama kodu başarıyla doğrulandı.",
   "The verification code is invalid": "Doğrulama kodu geçersizdir.",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>{{regist}}</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "KYC'yi tamamlayan cüzdan kullanıcıları, diğerlerini cüzdan oluşturmak ve KYC'yi tamamlamak için davet ederler.",
-  "The number of people invited each day should not exceed 20.": "Her gün davet edilen kişi sayısı 20'yi geçmemelidir.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-07-01 00:00:00.": "Her bir davet edilen kişi için, ve eğer davet edilen kişi üç kez ardışık olarak giriş yaparsa, davet eden <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC'lik bir ödül alacaktır，Etkinliğin son tarihi 2025-07-01 00:00:00.",
+  "The number of people invited each day should not exceed {{ipeoples}}.": "Her gün davet edilen kişi sayısı {{ipeoples}}'yi geçmemelidir.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "Her bir davet edilen kişi için, ve eğer davet edilen kişi üç kez ardışık olarak giriş yaparsa, davet eden <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC'lik bir ödül alacaktır，Etkinliğin son tarihi {{endtime}}.",
   "III. Clock in Reward": "III. Giriş Kaydı Ödülü",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "Doğrulama tamamlandıktan sonra <span style='color: rgba(184, 142, 86, 1);'>180</span> gün boyunca giriş kaydı ödülü geçerli olacak.",
-  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Bir gün boyunca giriş yapıp giriş kaydı yaptırabilirsiniz ve <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ödülü kazanabilirsiniz; maksimum <span style='color: rgba(184, 142, 86, 1);'>30</span> giriş kaydı ödülü.",
-  "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ödülleri Müşteri Tanıma Sürecini KYC tamamlamayı gerektirir ve aynı gün talep edilmelidir; talep edilmezse geçersizleşecektir.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "Doğrulama tamamlandıktan sonra <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> gün boyunca giriş kaydı ödülü geçerli olacak.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "Bir gün boyunca giriş yapıp giriş kaydı yaptırabilirsiniz ve <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC ödülü kazanabilirsiniz; maksimum <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> giriş kaydı ödülü.",
+  "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC ödülleri Müşteri Tanıma Sürecini KYC tamamlamayı gerektirir ve aynı gün talep edilmelidir; talep edilmezse geçersizleşecektir.",
   "The check-in reward has expired!": "Giriş ödülü süresi doldu!",
   "Show me a code snippet": "Bana bir kod parçacığını göster",
   "of a website's sticky header": "bir web sitesinin sabit başlığının",
