update trancup bug

--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Perintah Input",
   "Interface": "Antarmuka",
   "Invalid Tag": "Tag Tidak Valid",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Undang seorang teman untuk membuat dompet untuk mendapatkan 3000 DGC, teman Anda juga akan mendapatkan 1000 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Undang seorang teman untuk membuat dompet untuk mendapatkan {{regist}} DGC, teman Anda juga akan mendapatkan {{invite}} DGC",
   "Invite friends now": "Undang teman-teman sekarang",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Undang teman-teman untuk membuat dompet untuk mendapatkan 3000 DGC, teman-teman Anda juga akan mendapatkan 1000 DGC",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Undang teman-teman untuk membuat dompet untuk mendapatkan {{regist}} DGC, teman-teman Anda juga akan mendapatkan {{invite}} DGC",
   "Invite Friends to Earn DGC Rewards": "Undang Teman untuk Mendapatkan Hadiah DGC",
   "invite new user": "Undang Pengguna Baru",
   "January": "Januari",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Bantu saya belajar kosakata: tulislah sebuah kalimat untuk saya mengisi bagian kosong, dan saya akan mencoba memilih opsi yang benar.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Periksalah kalimat berikut untuk tata bahasa dan kejelasan: '[kalimat]'. Tulis ulang untuk keterbacaan yang lebih baik sambil mempertahankan makna aslinya.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bisakah Anda mulai dengan menanyakan kepada saya tentang kejadian-kejadian ketika saya paling suka menunda-nunda kemudian memberi saya beberapa saran untuk mengatasi itu?",
-  "I konw": "Saya tahu",
+  "I know": "Saya tahu",
   "About DGC": "Tentang DGC",
   "Instructions for importing private keys into wallets": "Petunjuk untuk mengimpor kunci privat ke dompet",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Kunci privat dompet yang dibuat di situs web ini dapat diimpor ke dompet berikut, seperti Metamask, imToken...",
