--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "입력 명령",
   "Interface": "인터페이스",
   "Invalid Tag": "유효하지 않은 태그",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "친구를 초대하여 지갑을 생성하고 3000 DGC 보상을 받으세요. 친구도 1000 DGC를 받습니다.",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "친구를 초대하여 지갑을 생성하고 {{regist}} DGC 보상을 받으세요. 친구도 {{invite}} DGC를 받습니다.",
   "Invite friends now": "지금 친구를 초대하세요",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "친구를 초대하여 지갑을 생성하고 3000 DGC 보상을 받으세요. 친구도 1000 DGC를 받습니다.",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "친구를 초대하여 지갑을 생성하고 {{regist}} DGC 보상을 받으세요. 친구도 {{invite}} DGC를 받습니다.",
   "Invite Friends to Earn DGC Rewards": "친구를 초대하여 DGC 보상을 받으세요",
   "invite new user": "새로운 사용자 초대",
   "January": "1월",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the the correct option.": "어휘 공부를 도와주세요. 빈칸을 채울 수 있는 문장을 써주세요. 그리고 제가 올바른 선택지를 골라보도록 하겠습니다.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "다음 문장의 문법과 명확성을 확인해주세요. '[문장]'. 원래의 의미를 유지하면서 더 읽기 쉽게 다시 쓰세요.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "제가 가장 늦추는 상황에 대해 묻고 나서 그것을 극복하기 위한 몇 가지 제안을 주실 수 있을까요?",
-  "I konw": "나는 알고 있다",
+  "I know": "나는 알고 있다",
   "About DGC": "DGC에 관하여",
   "Instructions for importing private keys into wallets": "지갑으로 개인 키를 가져오는 방법",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "웹사이트에서 생성된 지갑의 개인 키는 MetaMask, imToken 등 다음 지갑에 가져올 수 있습니다.",
