--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Eingabe-Befehle",
   "Interface": "Schnittstelle",
   "Invalid Tag": "Ungültiger Tag",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Laden Sie einen Freund ein, um eine Wallet zu erstellen und 3000 DGC zu verdienen, Ihr Freund wird auch 1000 DGC verdienen",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Laden Sie einen Freund ein, um eine Wallet zu erstellen und {{regist}} DGC zu verdienen, Ihr Freund wird auch {{invite}} DGC verdienen",
   "Invite friends now": "Laden Sie jetzt Freunde ein",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Laden Sie Freunde ein, um eine Wallet zu erstellen und 3000 DGC zu verdienen, Ihre Freunde werden auch 1000 DGC verdienen",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Laden Sie Freunde ein, um eine Wallet zu erstellen und {{regist}} DGC zu verdienen, Ihre Freunde werden auch {{invite}} DGC verdienen",
   "Invite Friends to Earn DGC Rewards": "Freunde einladen, um DGC-Belohnungen zu erhalten",
   "invite new user": "Neuen Benutzer einladen",
   "January": "Januar",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Hilf mir beim Vokabellernen: Schreibe mir einen Satz zum Ausfüllen der Lücke, und ich werde versuchen, die richtige Option auszuwählen.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Prüfe den folgenden Satz auf Grammatik und Klarheit: '[Satz]'. Schreibe ihn um, um eine bessere Lesbarkeit zu erreichen, während du seine ursprüngliche Bedeutung beibehältst.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Könntest du damit beginnen, mich nach Situationen zu fragen, in denen ich am meisten procrastiniere, und mir dann einige Vorschläge geben, um es zu überwinden?",
-  "I konw": "Ich weiß",
+  "I know": "Ich weiß",
   "About DGC": "Über DGC",
   "Instructions for importing private keys into wallets": "Anweisungen zum Importieren von Privatschlüsseln in Wallets",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Die Privatschlüssel von auf der Website erstellten Wallets können in die folgenden Wallets importiert werden, wie Metamask, imToken usw.",
