--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "",
   "Interface": "",
   "Invalid Tag": "",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "",
   "Invite friends now": "",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "",
   "Invite Friends to Earn DGC Rewards": "",
   "invite new user": "",
   "January": "",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "",
-  "I konw": "",
+  "I know": "",
   "About DGC": "",
   "Instructions for importing private keys into wallets": "",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "",
