--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -285,9 +285,9 @@
   "Input commands": "Commandes d'entrée",
   "Interface": "Interface",
   "Invalid Tag": "Tag invalide",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Invitez un ami à créer un portefeuille pour gagner 3000 DGC, votre ami gagnera également 1000 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Invitez un ami à créer un portefeuille pour gagner {{regist}} DGC, votre ami gagnera également {{invite}} DGC",
   "Invite friends now": "Invitez des amis maintenant",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Invitez des amis à créer un portefeuille pour gagner 3000 DGC, vos amis gagneront également 1000 DGC",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Invitez des amis à créer un portefeuille pour gagner {{regist}} DGC, vos amis gagneront également {{invite}} DGC",
   "Invite Friends to Earn DGC Rewards": "Invitez des amis pour gagner des récompenses en DGC",
   "invite new user": "Inviter un nouvel utilisateur",
   "January": "Janvier",
@@ -796,7 +796,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Aidez-moi à étudier le vocabulaire : écrivez une phrase pour que je remplit le blanc et je tâcherai de choisir la bonne option.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Vérifiez la phrase suivante pour la grammaire et la clarté : '[phrase]'. Réécrivez-la pour une meilleure lisibilité tout en conservant son sens original.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Pourriez-vous commencer par me demander des exemples de moments où je procrastine le plus puis me donner quelques conseils pour le surmonter?",
-  "I konw": "Je sais",
+  "I know": "Je sais",
   "About DGC": "À propos de DGC",
   "Instructions for importing private keys into wallets": "Instructions pour importer les clés privées dans les portefeuilles",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Les clés privées des portefeuilles créés sur le site web peuvent être importées dans les portefeuilles suivants, tels que Metamask, imToken...",
