--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -287,9 +287,9 @@
   "Input commands": "入力コマンド",
   "Interface": "インターフェイス",
   "Invalid Tag": "無効なタグ",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "友達を招待してウォレットを作成し、3000 DGCの報酬を獲得します。あなたの友達も1000 DGCを獲得します。",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "友達を招待してウォレットを作成し、{{regist}} DGCの報酬を獲得します。あなたの友達も{{invite}} DGCを獲得します。",
   "Invite friends now": "今すぐ友達を招待します",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "友達を招待してウォレットを作成し、3000 DGCの報酬を獲得します。あなたの友達も1000 DGCを獲得します。",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "友達を招待してウォレットを作成し、{{regist}} DGCの報酬を獲得します。あなたの友達も{{invite}} DGCを獲得します。",
   "Invite Friends to Earn DGC Rewards": "友達を招待してDGC報酬を獲得する",
   "invite new user": "新規ユーザーを招待する",
   "January": "1月",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "語彙の勉強を手伝ってください。空白を埋めるための文を書いてください。そして、私は正しい選択肢を選ぼうとします。",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "次の文の文法と明瞭さをチェックしてください。「[文]」。元の意味を保ちながら、読みやすく書き直してください。",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "あなたは、私が最も先延ばしをする状況について尋ねてから、それを克服するためのアドバイスをくれることはできますか？",
-  "I konw": "私は知っています",
+  "I know": "私は知っています",
   "About DGC": "DGC について",
   "Instructions for importing private keys into wallets": "ウォレットへの秘密鍵のインポート方法",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "ウェブサイトで作成されたウォレットの秘密鍵は、MetaMask、imToken などの次のウォレットにインポートできます",
