--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Comandos de entrada",
   "Interface": "Interface",
   "Invalid Tag": "Tag inválida",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Convide um amigo para criar uma carteira e ganhar 3000 DGC, seu amigo também ganhará 1000 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Convide um amigo para criar uma carteira e ganhar {{regist}} DGC, seu amigo também ganhará {{invite}} DGC",
   "Invite friends now": "Convide seus amigos agora",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Convide seus amigos para criar uma carteira e ganhar 3000 DGC, seus amigos também ganharão 1000 DGC",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Convide seus amigos para criar uma carteira e ganhar {{regist}} DGC, seus amigos também ganharão {{invite}} DGC",
   "Invite Friends to Earn DGC Rewards": "Convide seus amigos para ganhar recompensas em DGC",
   "invite new user": "Convidar um novo usuário",
   "January": "Janeiro",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Ajude-me a estudar vocabulário: escreva uma frase para eu preencher o espaço em branco e eu tentarei escolher a opção correta.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Verifique a seguinte frase quanto à gramática e clareza: '[frase]'. Reescreva-a para melhor legibilidade, mantendo o seu significado original.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Você poderia começar perguntando-me sobre as ocasiões em que mais procrastino e depois me dar algumas sugestões para superá-lo?",
-  "I konw": "Eu sei",
+  "I know": "Eu sei",
   "About DGC": "Sobre DGC",
   "Instructions for importing private keys into wallets": "Instruções para importar chaves privadas para carteiras",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "As chaves privadas de carteiras criadas no site podem ser importadas para as seguintes carteiras, como Metamask, imToken...",
