--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -285,9 +285,9 @@
   "Input commands": "Ввод команд",
   "Interface": "Интерфейс",
   "Invalid Tag": "Неверный тег",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Пригласить друга создать кошелек и получить 3000 DGC в качестве вознаграждения, ваш друг также получит 1000 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Пригласить друга создать кошелек и получить {{regist}} DGC в качестве вознаграждения, ваш друг также получит {{invite}} DGC",
   "Invite friends now": "Пригласить друзей сейчас",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Пригласить друзей создать кошелек и получить 3000 DGC в качестве вознаграждения, ваши друзья также получат 1000 DGC",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Пригласить друзей создать кошелек и получить {{regist}} DGC в качестве вознаграждения, ваши друзья также получат {{invite}} DGC",
   "Invite Friends to Earn DGC Rewards": "Пригласить друзей, чтобы получить вознаграждение DGC",
   "invite new user": "Пригласить нового пользователя",
   "January": "Январь",
@@ -796,7 +796,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Помогите мне изучать лексику: напишите мне предложение для заполнения пропуска, и я постараюсь выбрать правильный вариант.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Проверьте следующее предложение на грамматику и ясность: '[предложение]'. Перепишите его для лучшей читаемости, сохраняя исходный смысл.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Можете ли вы начать, спросив меня о случаях, когда я наиболее откладываю выполнение дел, а затем дать мне несколько советов, чтобы преодолеть это?",
-  "I konw": "Я знаю",
+  "I know": "Я знаю",
   "About DGC": "О DGC",
   "Instructions for importing private keys into wallets": "Инструкция по импорту приватных ключей в кошельки",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Приватные ключи кошельков, созданных на сайте, могут быть импортированы в следующие кошельки, такие как Metamask, imToken...",
