--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "คำสั่งอินพุต",
   "Interface": "อินเทอร์เฟซ",
   "Invalid Tag": "แท็กที่ไม่ถูกต้อง",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "เชิญเพื่อนเพื่อสร้างกระเป๋าเงินเพื่อรับรางวัล DGC 3000, เพื่อนของคุณจะได้รับ DGC 1000 ด้วย",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "เชิญเพื่อนเพื่อสร้างกระเป๋าเงินเพื่อรับรางวัล DGC {{regist}}, เพื่อนของคุณจะได้รับ DGC {{invite}} ด้วย",
   "Invite friends now": "เชิญเพื่อนในตอนนี้",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "เชิญเพื่อนเพื่อสร้างกระเป๋าเงินเพื่อรับรางวัล DGC 3000, เพื่อนของคุณจะได้รับ DGC 1000 ด้วย",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "เชิญเพื่อนเพื่อสร้างกระเป๋าเงินเพื่อรับรางวัล DGC {{regist}}, เพื่อนของคุณจะได้รับ DGC {{invite}} ด้วย",
   "Invite Friends to Earn DGC Rewards": "เชิญเพื่อนเพื่อรับรางวัล DGC",
   "invite new user": "เชิญผู้ใช้ใหม่",
   "January": "มกราคม",
@@ -796,7 +796,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "ช่วยฉันเรียนศัพท์ด้วยนะ: เขียนประโยคให้ฉันเติมคำว่าง แล้วฉันจะลองเลือกตัวเลือกที่ถูกต้อง",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "ตรวจสอบประโยคต่อไปนี้ด้วยไวยากรณ์และความชัดเจน: '[ประโยค]'. เขียนใหม่เพื่อให้อ่านง่ายขึ้นโดยยังคงความหมายเดิม",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "คุณสามารถเริ่มด้วยการถามฉันเกี่ยวกับเหตุการณ์ที่ฉันล่าช้าได้มากที่สุด แล้วให้คำแนะนำให้ฉันเพื่อเอาชนะมันได้หรือไม่?",
-  "I konw": "ฉันรู้",
+  "I know": "ฉันรู้",
   "About DGC": "เกี่ยวกับ DGC",
   "Instructions for importing private keys into wallets": "คำแนะนำในการนำเข้า คีย์ส่วนตัวลงในกระเป๋าเงิน",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "คีย์ส่วนตัวของกระเป๋าเงินที่สร้างขึ้นบนเว็บไซต์สามารถนำเข้าไปในกระเป๋าเงินต่อไปนี้ เช่น Metamask, imToken...",
