--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Giriş Komutları",
   "Interface": "Arayüz",
   "Invalid Tag": "Geçersiz Etiket",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Bir arkadaşınızı cüzdan oluşturmak için davet edin ve 3000 DGC ödülü kazanın, arkadaşınız da 1000 DGC kazanacak",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Bir arkadaşınızı cüzdan oluşturmak için davet edin ve {{regist}} DGC ödülü kazanın, arkadaşınız da {{invite}} DGC kazanacak",
   "Invite friends now": "Şimdi arkadaşları davet edin",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Arkadaşlarınızı cüzdan oluşturmak için davet edin ve 3000 DGC ödülü kazanın, arkadaşlarınız da 1000 DGC kazanacak",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Arkadaşlarınızı cüzdan oluşturmak için davet edin ve {{regist}} DGC ödülü kazanın, arkadaşlarınız da {{invite}} DGC kazanacak",
   "Invite Friends to Earn DGC Rewards": "Arkadaşları davet edin ve DGC ödüllerini kazanın",
   "invite new user": "Yeni kullanıcıyı davet et",
   "January": "Ocak",
@@ -797,7 +797,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Kelime hazinesimi çalıştırmaya yardım et: boşluğu dolduracak bir cümle yazın ve ben doğru seçeneği seçmeye çalışacağım.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Aşağıdaki cümleyi dilbilgisi ve açıklığa göre kontrol et: '[cümle]'. Orijinal anlamını korurken daha okunabilir hale getirmek için yeniden yazın.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "En çok erteleme yaptığım durumlardan bahsederek başlayabilir misin ve sonra bunu aşmak için bazı öneriler verebilir misin?",
-  "I konw": "Biliyorum",
+  "I know": "Biliyorum",
   "About DGC": "DGC Hakkında",
   "Instructions for importing private keys into wallets": "Cüzdanlara özel anahtarları içeri aktarma talimatları",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Web sitesinde oluşturulan cüzdanların özel anahtarları, Metamask, imToken gibi aşağıdaki cüzdanlara aktarılabilir.",
