--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Nhap các lệnh",
   "Interface": "Giao diện",
   "Invalid Tag": "Thẻ không hợp lệ",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Mời một bạn tạo ví để nhận thưởng DGC 3000, bạn bè của bạn cũng sẽ nhận được 1000 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "Mời một bạn tạo ví để nhận thưởng DGC {{regist}}, bạn bè của bạn cũng sẽ nhận được {{invite}} DGC",
   "Invite friends now": "Mời bạn bè ngay bây giờ",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Mời bạn bè tạo ví để nhận thưởng DGC 3000, bạn bè của bạn cũng sẽ nhận được 1000 DGC thưởng.",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "Mời bạn bè tạo ví để nhận thưởng DGC {{regist}}, bạn bè của bạn cũng sẽ nhận được {{invite}} DGC thưởng.",
   "Invite Friends to Earn DGC Rewards": "Mời bạn bè để nhận thưởng DGC",
   "invite new user": "Mời người dùng mới",
   "January": "Tháng 1",
@@ -788,7 +788,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Giúp tôi học tập từ vựng: viết cho tôi một câu để điền vào chỗ trống, và tôi sẽ cố gắng chọn lựa chọn đúng.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Kiểm tra câu sau về ngữ pháp và độ rõ ràng: '[câu]'. Viết lại cho dễ đọc hơn trong khi vẫn giữ nguyên nghĩa của nó.",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bạn có thể bắt đầu bằng cách hỏi tôi về các trường hợp tôi trì hoãn nhiều nhất và sau đó cho tôi một số gợi ý để vượt qua nó không?",
-  "I konw": "Tôi biết",
+  "I know": "Tôi biết",
   "About DGC": "Về DGC",
   "Instructions for importing private keys into wallets": "Hướng dẫn nhập khóa riêng vào ví tiền",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Các khóa riêng của các ví tiền được tạo trên website có thể được nhập vào các ví tiền sau đây, chẳng hạn như Metamask, imToken...",
