--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -291,9 +291,9 @@
   "Input commands": "输入命令",
   "Interface": "界面；接口",
   "Invalid Tag": "无效标签",
-  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "邀请一位朋友创建钱包以赚取 3000 个 DGC 奖励，你的朋友也将获得 1000 个 DGC",
+  "Invite a friend to create a wallet to earn {{regist}} DGC rewards,you friend will also earn {{invite}} DGC": "邀请一位朋友创建钱包以赚取 {{regist}} 个 DGC 奖励，你的朋友也将获得 {{invite}} 个 DGC",
   "Invite friends now": "现在邀请朋友",
-  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "邀请朋友创建钱包以赚取 3000 个 DGC 奖励，你的朋友们也将获得 1000 个 DGC 奖励。",
+  "Invite friends to create a wallet to earn {{regist}} DGC rewards,your friends will also earn {{invite}} DGC rewards.": "邀请朋友创建钱包以赚取 {{regist}} 个 DGC 奖励，你的朋友们也将获得 {{invite}} 个 DGC 奖励。",
   "Invite Friends to Earn DGC Rewards": "邀请朋友赚取 DGC 奖励",
   "invite new user": "邀请新用户",
   "January": "一月",
@@ -796,7 +796,7 @@
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "帮我学习词汇：给我写一个填空题的句子，然后我会试着选出正确的选项。",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "检查以下句子的语法和清晰度：‘[句子]’。在保持原意的情况下，为提高可读性对其进行改写。",
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "你能不能先问问我拖延情况最严重的事例，然后给我一些克服拖延的建议呢？",
-  "I konw": "我知道",
+  "I know": "我知道",
   "About DGC": "关于 DGC",
   "Instructions for importing private keys into wallets": "私钥导入钱包说明",
   "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "在网站创建的钱包私钥可导入以下钱包，Metamask,imToken...",
