update add tip Please return to the software interface and click Complete.

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -668,6 +668,7 @@
   "Time expired, try again": "",
   "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "",
   "Your kyc rewards have been credited.": "",
+  "Please return to the software interface and click Complete.": "",
   "The identity validate fail": "",
   "Your haven't started live testing yet": "",
   "AUTHENTICATED": "",
