--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -667,6 +667,7 @@
   "Time expired, try again": "Время истекло, попробуйте еще раз",
   "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "Вы уже привязали идентификацию по лицу для KYC к другому кошельку. Можно привязать только один кошелек.",
   "Your kyc rewards have been credited.": "Ваши награды за KYC были зачислены.",
+  "Please return to the software interface and click Complete.": "Пожалуйста, вернитесь в интерфейс программы и нажмите Завершить.",
   "The identity validate fail": "Проверка идентификации не удалась",
   "Your haven't started live testing yet": "Вы еще не начали тестирование вживую",
   "AUTHENTICATED": "Аутентифицирован",
