--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -667,6 +667,7 @@
   "Time expired, try again": "时间已过期，请再试一次",
   "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "你已经用其他钱包进行过人脸KYC绑定，只能绑定一个钱包。",
   "Your kyc rewards have been credited.": "您的 KYC 奖励已入账",
+  "Please return to the software interface and click Complete.": "请返回软件界面，点击完成。",
   "The identity validate fail": "身份验证失败",
   "Your haven't started live testing yet": "您还尚未开始直播测试",
   "AUTHENTICATED": "认证完成",
