--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -668,6 +668,7 @@
   "Time expired, try again": "Die Zeit ist abgelaufen, versuchen Sie es erneut",
   "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "Sie haben Ihre Gesichtserkennung für die KYC-Bestätigung bereits mit einem anderen Wallet verbunden. Es kann nur ein Wallet angebunden werden.",
   "Your kyc rewards have been credited.": "Ihre KYC-Belohnungen wurden gutgeschrieben.",
+  "Please return to the software interface and click Complete.": "Bitte kehren Sie zur Software-Oberfläche zurück und klicken Sie auf Fertig stellen.",
   "The identity validate fail": "Die Identitätsüberprüfung ist fehlgeschlagen",
   "Your haven't started live testing yet": "Sie haben die Live-Tests noch nicht begonnen",
   "AUTHENTICATED": "Authentifiziert",
