--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -668,6 +668,7 @@
   "Time expired, try again": "時間が切れました。もう一度試してください",
   "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "あなたはすでに別のウォレットに顔認証の KYC をバインドしています。ウォレットは 1 つだけバインドできます。",
   "Your kyc rewards have been credited.": "あなたの KYC 報酬は既に入金されました",
+  "Please return to the software interface and click Complete.": "ソフトウェアのインターフェースに戻り、「完了」をクリックしてください。",
   "The identity validate fail": "本人確認に失敗しました",
   "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
   "AUTHENTICATED": "認証済み",
