--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -948,5 +948,6 @@
   "Recharge DGC": "Recharger DGC",
   "Time expired": "Temps expiré",
   "QR code is invalid": "Le code QR est invalide",
-  "Is the password saved locally": "Le mot de passe est-il enregistré localement"
+  "Is the password saved locally": "Le mot de passe est-il enregistré localement",
+  "Reconnect": "Reconnecter"
 }
