--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -949,6 +949,7 @@
   "Recharge DGC": "",
   "Time expired": "",
   "QR code is invalid": "",
-  "Is the password saved locally": ""
+  "Is the password saved locally": "",
+  "Reconnect": ""
 }
 
