--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -948,5 +948,6 @@
   "Recharge DGC": "Пополнить DGC",
   "Time expired": "Время истекло",
   "QR code is invalid": "QR-код недействителен",
-  "Is the password saved locally": "รหัสผ่านถูกบันทึกไว้ในเครื่องหรือไม่"
+  "Is the password saved locally": "รหัสผ่านถูกบันทึกไว้ในเครื่องหรือไม่",
+  "Reconnect": "Переподключить"
 }
