--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -948,5 +948,6 @@
   "Recharge DGC": "เติม DGC",
   "Time expired": "หมดเวลา",
   "QR code is invalid": "QR โค้ดไม่ถูกต้อง",
-  "Is the password saved locally": "รหัสผ่านถูกบันทึกไว้ในเครื่องหรือไม่"
+  "Is the password saved locally": "รหัสผ่านถูกบันทึกไว้ในเครื่องหรือไม่",
+  "Reconnect": "เชื่อมต่อใหม่"
 }
